--- a/index.html
+++ b/index.html
@@ -1,6 +1,107 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World, my name is Noah Glassner</h1>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>site name</title>
+    <meta name="description" content="Your Webpage Description">
+    <meta name="author" content="Joy Wood">
+
+    <!-- Enable responsive viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Le styles -->
+    <!-- For now, feel free to just keep this as is. These are stylesheets that set up things like the font -->
+
+    <link href="https://kbroman.org/simple_site/assets/themes/twitter/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
+    <link href="https://kbroman.org/simple_site/assets/themes/twitter/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="https://kbroman.org/simple_site/assets/themes/twitter/css/kbroman.css" rel="stylesheet" type="text/css" media="all">
+
+    <!-- Le fav and touch icons -->
+
+    <!-- atom & rss feed -->
+    <link href="https://kbroman.org/simple_sitenil" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
+    <link href="https://kbroman.org/simple_sitenil" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
+
+  </head>
+
+  <body>
+    <div class="navbar">
+      <div class="navbar-inner">
+        <div class="container-narrow">
+          <a class="brand" href="https://joywoodteaching.github.io/">Ms Wood's Site</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-narrow">
+
+      <div class="content">
+        
+
+<div class="page-header">
+  <h2>simple site  <small>Your class site subtitle</small></h2>
+</div>
+
+<div class="row-fluid">
+  <div class="span12">
+    <p> Welcome to this free super simple website. You'll modify my code to make your own portfolio website by the end of class. Put a simple paragraph here introducing yourself.</p>
+
+<p>Put a list of your projects that you've worked on for this class here.</p>
+
+<ul>
+  <li>Project 1</li>
+  <li>Project 2</li>
+  <li>Project 3</li>
+</ul>
+
+
+<p>When we learn how to make new pages, each of these links will open up one of your project pages, 
+  or another page you want included on your website. For now they are kind of meaningless links that won't open anything.</p>
+
+<ul>
+  <li><a href="pages/overview.html">Overview</a></li>
+  <li><a href="pages/independent_site.html">Making an independent website</a></li>
+  <li><a href="pages/user_site.html">Making a personal site</a></li>
+  <li><a href="pages/project_site.html">Making a site for a project</a></li>
+</ul>
+
+<p>For today you need to make the following modifications</p>
+    <ul>
+  <li>The titles and headers should all be personalized</li>
+  <li>Thename of your site (that shows up in the tab) should be personalized</li>
+  <li>You should have an introductory paragraph. Bonus points if it's actually interesting</li>
+  <li>You should have a customized list of projects/assignments that you worked on for this class</li>
+  <li>You should remove information like this that will not be on your final webpage. It should be as personlized as possible.</li>
+
+</ul>
+
+<p>For extra credit you can begin exploring the following things</p>
+    <ul>
+  <li>How to add images</li>
+  <li>Changing fonts/color/bold/italics</li>
+  <li>Adding more pages to your site</li>
+  <li>Different heading styles</li>
+
+</ul>
+  </div>
+</div>
+
+
+      </div>
+      <hr>
+      <footer>
+        <p><small>
+          <a href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0"/></a> &nbsp;
+        </small></p>
+      </footer>
+
+    </div>
+
+    
+  </body>
 </html>
