--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>John is dumb</title>
+    <title>sup guys </title>
     <meta name="description" content="Your Webpage Description">
     <meta name="author" content="Joy Wood">
 
