--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="https://joywoodteaching.github.io/">Ms Wood's Site</a>
+          <a class="brand" href="https://joywoodteaching.github.io/">Why Noah is cool</a>
         </div>
       </div>
     </div>
