--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>sup guys </title>
     <meta name="description" content="Your Webpage Description">
-    <meta name="author" content="Joy Wood">
+    <meta name="author" content="Noah Glassner">
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,7 +49,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to this free super simple website. You'll modify my code to make your own portfolio website by the end of class. Put a simple paragraph here introducing yourself.</p>
+    <p>Welcome to my personal website, my name is Noah Glassner.</p>
 
 <p>Put a list of your projects that you've worked on for this class here.</p>
 
