--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         
 
 <div class="page-header">
-  <h2>simple site  <small>Your class site subtitle</small></h2>
+  <h2>simple site  <small>My Life</small></h2>
 </div>
 
 <div class="row-fluid">
   <div class="span12">
-    <p>Welcome to my personal website, my name is Noah Glassner.</p>
+    <p> Welcome to my personal website, my name is Noah Glassner. </p>
 
 <p>Put a list of your projects that you've worked on for this class here.</p>
 
