--- a/index.html
+++ b/index.html
@@ -50,27 +50,24 @@
 <div class="row-fluid">
   <div class="span12">
     <p> Welcome to my personal website, my name is Noah Glassner. </p>
-
-<p>Put a list of your projects that you've worked on for this class here.</p>
+    
+<p>My name is Noah Glassner and I'm currently a Junior at DSST College View HS. I was born and raised in Denver, Colorado for all my life. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science</p>
+<ul>
+  
+<p>List of the projects i did so far in Computer Science</p>
 
 <ul>
-  <li>Project 1</li>
-  <li>Project 2</li>
-  <li>Project 3</li>
+  <li>Coding Pong</li>
+  <li>Tinkecad Cra</li>
+  <li>Currently making website</li>
 </ul>
 
 
-<p>When we learn how to make new pages, each of these links will open up one of your project pages, 
-  or another page you want included on your website. For now they are kind of meaningless links that won't open anything.</p>
+<p>I go to the best high school in the world and it is DSST CV HS</p>
 
 <ul>
-  <li><a href="pages/overview.html">Overview</a></li>
-  <li><a href="pages/independent_site.html">Making an independent website</a></li>
-  <li><a href="pages/user_site.html">Making a personal site</a></li>
-  <li><a href="pages/project_site.html">Making a site for a project</a></li>
-</ul>
 
-<p>For today you need to make the following modifications</p>
+<p>Facts about me</p>
     <ul>
   <li>The titles and headers should all be personalized</li>
   <li>Thename of your site (that shows up in the tab) should be personalized</li>
