--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>sup guys </title>
+    <title>Noah Glassner </title>
     <meta name="description" content="Your Webpage Description">
     <meta name="author" content="Noah Glassner">
 
@@ -44,34 +44,28 @@
         
 
 <div class="page-header">
-  <h2>simple site  <small>My Life</small></h2>
+  <font color="Blue"> <h2>My Bio  </font><small>Sup </small></h2>
 </div>
-
+  
 <div class="row-fluid">
   <div class="span12">
     <p> Welcome to my personal website, my name is Noah Glassner. </p>
     
-<p>My name is Noah Glassner and I'm currently a Junior at DSST College View HS. I was born and raised in Denver, Colorado for all my life. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science</p>
+<p>My name is Noah Glassner and I'm currently a Junior at DSST College View HS. I was born and raised in Denver, Colorado for all my life. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science.</p>
 <ul>
   
-<p>List of the projects i did so far in Computer Science</p>
+<p>List of the projects I have done or I'm doing right now in Computer Science.</p>
 
 <ul>
   <li>Coding Pong</li>
-  <li>Tinkecad Cra</li>
+  <li>Tinkecad Car</li>
   <li>Currently making website</li>
 </ul>
-
-
-<p>I go to the best high school in the world and it is DSST CV HS</p>
-
-<ul>
 
 <p>Facts about me</p>
     <ul>
   <li>The titles and headers should all be personalized</li>
   <li>Thename of your site (that shows up in the tab) should be personalized</li>
-  <li>You should have an introductory paragraph. Bonus points if it's actually interesting</li>
   <li>You should have a customized list of projects/assignments that you worked on for this class</li>
   <li>You should remove information like this that will not be on your final webpage. It should be as personlized as possible.</li>
 
