--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <div class="row-fluid">
   <div class="span12">
     <p> Welcome to my personal website, my name is Noah Glassner. </p>
+    <img src="Images/Noah.jpg" style="width:200px;height:200px">
     
 <p>My name is Noah Glassner and I'm currently a Junior at DSST College View HS. I was born and raised in Denver, Colorado for all my life. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science.</p>
 <ul>
@@ -62,12 +63,12 @@
   <li>Currently making website</li>
 </ul>
 
-<p>Facts about me</p>
+<p>Random facts about me</p>
     <ul>
-  <li>The titles and headers should all be personalized</li>
-  <li>Thename of your site (that shows up in the tab) should be personalized</li>
-  <li>You should have a customized list of projects/assignments that you worked on for this class</li>
-  <li>You should remove information like this that will not be on your final webpage. It should be as personlized as possible.</li>
+  <li>I like to play Piano.</li>
+  <li>I like to lift weights.</li>
+  <li>I play videogames</li>
+  <li>I like rock like Queen.</li>
 
 </ul>
 
