--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <div class="row-fluid">
   <div class="span12">
     <p> Welcome to my personal website, my name is Noah Glassner. </p>
-    <img src="Screenhots/Noah.jpg" alt="Noah Glassner" style="width:200px;height:200px">
-    <h1> Noah Glassner </h1>
+    <img src="Screenhots/Noah.jpg" style="width:200px;height:200px">
+    
 <p>My name is Noah Glassner and I'm currently a Junior at DSST College View HS. I was born and raised in Denver, Colorado for all my life. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science.</p>
 <ul>
   
