--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div class="row-fluid">
   <div class="span12">
     <p> Welcome to my personal website, my name is Noah Glassner. </p>
-    <img src="Screenhots/Noah.jpg" style="width:200px;height:200px">
+    <img> src="Screenhots/Noah.jpg" style="width:200px;height:200px">
     
 <p>My name is Noah Glassner and I'm currently a Junior at DSST College View HS. I was born and raised in Denver, Colorado. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science.</p>
 <ul>
