--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 <div class="row-fluid">
   <div class="span12">
     <p> Welcome to my personal website, my name is Noah Glassner. </p>
-    <body>
-    <img src="Noah.jpg" style="width:200px;height:200px"/>
+    <img src="https://www.google.com/search?q=Celia+Glassner&rlz=1C1GCEB_enUS811US811&source=lnms&tbm=isch&sa=X&ved=0ahUKEwj89t2z2efhAhUugK0KHT-lCfIQ_AUIDigB&biw=1366&bih=657&safe=active&ssui=on#imgrc=qya11xp150biwM:">
     
 <p>My name is Noah Glassner and I'm currently a Junior at DSST College View HS. I was born and raised in Denver, Colorado. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science.</p>
 <ul>
