--- a/index.html
+++ b/index.html
@@ -49,8 +49,16 @@
   
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to my personal website, my name is Noah Glassner. </p>
-    <img src="https://www.google.com/search?q=Celia+Glassner&rlz=1C1GCEB_enUS811US811&source=lnms&tbm=isch&sa=X&ved=0ahUKEwj89t2z2efhAhUugK0KHT-lCfIQ_AUIDigB&biw=1366&bih=657&safe=active&ssui=on#imgrc=qya11xp150biwM:">
+    <p> Welcome to my personal website, my name is Noah Glassner. </p><html>
+   <head>
+      <title>HTML img Tag</title>
+   </head>
+
+   <body>
+      <img src="/html/images/test.png" alt="Simply Easy Learning" width="200"
+         height="80">
+   </body>
+</html>
     
 <p>My name is Noah Glassner and I'm currently a Junior at DSST College View HS. I was born and raised in Denver, Colorado. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science.</p>
 <ul>
