--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
    </head>
 
    <body>
-      <img src="/html/images/test.png" alt="Simply Easy Learning" width="200"
+      <img src="/html/images/noah" alt="Noah" width="200"
          height="80">
    </body>
 </html>
