--- a/pongproject.html
+++ b/pongproject.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>site name</title>
+    <title>Pong Project</title>
     <meta name="description" content="Your Webpage Description">
-    <meta name="author" content="Joy Wood">
+    <meta name="author" content="Noah Glassner">
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="https://joywoodteaching.github.io/">Ms Wood's Site</a>
+          <a class="brand" href="https://noahglassner.github.io/">Noah is cool</a>
         </div>
       </div>
     </div>
