--- a/pongproject.html
+++ b/pongproject.html
@@ -44,7 +44,7 @@
         
 
 <div class="page-header">
-  <font color="orange"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
+  <font color="green"> <h2>Pong Project </font><small>on processing</small></h2>
 </div>
         <div class="page-header">
   <font color="orange"> <h2>My Projects  </font></h2>
@@ -53,7 +53,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p>This is a page about my Processing Project</p>
+    <p>This is a page about my Processing Project, it's based off the famous game pong.</p>
 
 
 
