--- a/pongproject.html
+++ b/pongproject.html
@@ -47,7 +47,7 @@
   <font color="green"> <h2>Pong Project </font><small>on processing</small></h2>
 </div>
         <div class="page-header">
-  <font color="orange"> <h2>My Projects  </font></h2>
+  <font color="orange"> <h2>Pong </font></h2>
 </div>
 
 
