--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <p>List of the projects I have done or I'm doing right now in Computer Science.</p>
 
 <ul>
-  <li>Coding Pong</li>
+  li><a href="pongproject.html">Pong processing project</a></li>
   <li>Tinkecad Car</li>
   <li>Currently making website</li>
 </ul>
