--- a/pongproject.html
+++ b/pongproject.html
@@ -46,9 +46,7 @@
 <div class="page-header">
   <font color="green"> <h2>Pong Project </font><small>on processing</small></h2>
 </div>
-        <div class="page-header">
-  <font color="orange"> <h2>Pong </font></h2>
-</div>
+<img src="Pong.jpg">
 
 
 <div class="row-fluid">
