--- a/pongproject.html
+++ b/pongproject.html
@@ -46,7 +46,7 @@
 <div class="page-header">
   <font color="green"> <h2>Pong Project </font><small>on processing</small></h2>
 </div>
-<img src="Pong.jpg">
+<img src="Pong.JPG">
 
 
 <div class="row-fluid">
