--- a/pongproject.html
+++ b/pongproject.html
@@ -33,7 +33,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="https://noahglassner.github.io/">Noah is cool</a>
+          <a class="brand" href="https://noahglassner.github.io/">Pong Project</a>
         </div>
       </div>
     </div>
@@ -46,15 +46,13 @@
 <div class="page-header">
   <font color="green"> <h2>Pong Project </font><small>on processing</small></h2>
 </div>
-<img src="Pong.JPG">
-
 
 <div class="row-fluid">
   <div class="span12">
     <p>This is a page about my Processing Project, it's based off the famous game pong.</p>
-
-
-
+<img src="Pong.JPG">
+ 
+<img src="Code.JPG">
       </div>
       <hr>
       <footer>
