--- a/pongproject.html
+++ b/pongproject.html
@@ -51,8 +51,8 @@
   <div class="span12">
     <p>This is a page about my Processing Project, it's based off the famous game pong.</p>
 <img src="Pong.JPG">
- 
-<img src="Code.JPG">
+   <p>I made this game the first trimester on my Junior year of high school.</p>
+    
       </div>
       <hr>
       <footer>
