--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
 <ul>
   <li><a href="pongproject.html">Pong processing project</a></li>
-  <li>Tinkecad Car</li>
-  <li>Currently making website</li>
+  <li><a href="tinkercadhouse.html">Tinkercad House</a></li>
+  <li><a href="arduinoproject.html">Arduino Project</a></li>
 </ul>
 
 <p>Random facts about me</p>
