--- a/tinkercadhouse.html
+++ b/tinkercadhouse.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>site name</title>
+    <title>TinkerCad House</title>
     <meta name="description" content="Your Webpage Description">
-    <meta name="author" content="Joy Wood">
+    <meta name="author" content="Noah Glassner">
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,16 +44,15 @@
         
 
 <div class="page-header">
-  <font color="orange"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
+  <font color="Brown"> <h2>Tinkercad House</font><small>Your class site subtitle</small></h2>
 </div>
-        <div class="page-header">
-  <font color="orange"> <h2>My Projects  </font></h2>
-</div>
+     <img src="TinkercadHOUSE.JPG">
 
+        
 
 <div class="row-fluid">
   <div class="span12">
-    <p>This is a page about my Processing Project</p>
+    <p>This is a page about my Tinkercad house project.</p>
 
 
 
