--- a/tinkercadhouse.html
+++ b/tinkercadhouse.html
@@ -46,13 +46,15 @@
 <div class="page-header">
   <font color="Brown"> <h2>Tinkercad House</font><small>Your class site subtitle</small></h2>
 </div>
-     <img src="TinkercadHOUSE.JPG">
+        <p>This is a page about my Tinkercad house project.</p>
+    
+        <img src="TinkercadHOUSE.JPG">
 
         
 
 <div class="row-fluid">
   <div class="span12">
-    <p>This is a page about my Tinkercad house project.</p>
+    <p>This house was built my third trimester of junior year and the purpose of this project was to be able to 3D print it..</p>
 
 
 
