--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
 
 <div class="page-header">
-  <font color="Blue"> <h2>My Bio  </font><small>Sup </small></h2>
+  <font color="Blue"> <h2>About me</font><small>Sup </small></h2>
 </div>
   
 <div class="row-fluid">
