--- a/arduinoproject.html
+++ b/arduinoproject.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Arduino Project</title>
     <meta name="description" content="Your Webpage Description">
-    <meta name="author" content="Joy Wood">
+    <meta name="author" content="Noah Glassner">
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,7 +44,7 @@
         
 
 <div class="page-header">
-  <font color="Red"> <h2>Arduino Project </font><small>Your class site subtitle</small></h2>
+  <font color="Red"> <h2>Arduino Project </font><small>Tri 3</small></h2>
 </div>
         <p>This project was the most fun project I created in Computer science.
           
