--- a/tinkercadhouse.html
+++ b/tinkercadhouse.html
@@ -44,7 +44,7 @@
         
 
 <div class="page-header">
-  <font color="Brown"> <h2>Tinkercad House</font><small>Your class site subtitle</small></h2>
+  <font color="Brown"> <h2>Tinkercad House</font><small>Tri 3</small></h2>
 </div>
         <p>This is a page about my Tinkercad house project.</p>
     
