--- a/pongproject.html
+++ b/pongproject.html
@@ -33,7 +33,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="https://noahglassner.github.io/">Pong Project</a>
+          <a class="brand" href="https://noahglassner.github.io/">Noah's Site</a>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
   <div class="span12">
     <p>This is a page about my Processing Project, it's based off the famous game pong.</p>
 <img src="Pong.JPG">
-   <p>I made this game the first trimester on my Junior year of high school.</p>
+   <p>I made this game the first trimester on my Junior year of high school and this was one of the first games i've created in Computer Science..</p>
     
       </div>
       <hr>
