--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="https://joywoodteaching.github.io/">Why Noah is cool</a>
+          <a class="brand" href="https://noahglassner.github.io/">Noah's Site</a>
         </div>
       </div>
     </div>
@@ -44,7 +44,7 @@
         
 
 <div class="page-header">
-  <font color="Blue"> <h2>About me</font><small>Sup </small></h2>
+  <font color="Blue"> <h2>About me</font><small>Noah's Site</small></h2>
 </div>
   
 <div class="row-fluid">
