--- a/pongproject.html
+++ b/pongproject.html
@@ -44,7 +44,7 @@
         
 
 <div class="page-header">
-  <font color="green"> <h2>Pong Project </font><small>on processing</small></h2>
+    <font color="Green"> <h2>Pong Project </font><small>Tri 3</small></h2>
 </div>
 
 <div class="row-fluid">
