--- a/pongproject.html
+++ b/pongproject.html
@@ -51,7 +51,7 @@
   <div class="span12">
     <p>This is a page about my Processing Project, it's based off the famous game pong.</p>
 <img src="Pong.JPG">
-   <p>I made this game the first trimester on my Junior year of high school and this was one of the first games i've created in Computer Science..</p>
+   <p>I made this game the first trimester on my Junior year of high school and this was one of the first games I created in Computer Science.</p>
     
       </div>
       <hr>
