--- a/tinkercadhouse.html
+++ b/tinkercadhouse.html
@@ -55,7 +55,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p>This house was built my third trimester of junior year and the purpose of this project was to be able to 3D print it.</p>
+    <p>This house was built my third trimester of junior year and the purpose of this project was to be able to 3D print it. <a href="https://www.tinkercad.com/embed/armDkxllBkB">click here</a></p>
 
 
 
