--- a/index.html
+++ b/index.html
@@ -49,14 +49,12 @@
   
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to my personal website, my name is Noah Glassner. </p><html>
+    <p>My name is Noah Glassner and I'm currently a Junior at DSST College View HS. I was born and raised in Denver, Colorado. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science.</p><html>
    <head>
       <title>HTML img Tag</title>
    </head>
 
       <img src="Noah.jpg">
-    
-<p>My name is Noah Glassner and I'm currently a Junior at DSST College View HS. I was born and raised in Denver, Colorado. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science.</p>
 <ul>
   
 <p>List of the projects I have done or I'm doing right now in Computer Science.</p>
