--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <img src="Noah.jpg">
 <ul>
   
-<p>List of the projects I have done or I'm doing right now in Computer Science.</p>
+<b>List of the projects I have done or I'm doing right now in Computer Science.</b>
 
 <ul>
   <li><a href="pongproject.html">Pong processing project</a></li>
