--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   
 <div class="row-fluid">
   <div class="span12">
-    <p>My name is Noah Glassner and I'm currently a Junior at DSST College View HS. I was born and raised in Denver, Colorado. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science.</p><html>
+    <p>Welcome to my personal website. My name is Noah Glassner and I am an 11th grade student at DSST College View. I was born and raised in Denver, Colorado. I am 17 years old and I plan on attending to a four-year college here in Colorado and study Computer Science.</p><html>
    <head>
       <title>HTML img Tag</title>
    </head>
@@ -65,12 +65,12 @@
   <li><a href="arduinoproject.html">Arduino Project</a></li>
 </ul>
 
-<p>Random facts about me</p>
+<b>Random facts about me</b>
     <ul>
-  <li>I like to play Piano.</li>
-  <li>I like to lift weights.</li>
-  <li>I play videogames</li>
-  <li>I like rock like Queen.</li>
+  <li>I like to play Piano and I have been playing for a while now.</li>
+  <li>I like exercising, mostly weight lifting.</li>
+  <li>I like to play videogames and I have been playing them for 7 years.</li>
+  <li>I enjoy all types of music but if I had to chose a favorite, it would be rap.</li>
 
 </ul>
 
